# fitdb

./: .gitignore  README.md  env-dev.yaml  fit.db  mypy.ini  pyproject.toml  pytest.ini
.github/: pull_request_template.md
fitdb/: __init__.py
fitdb/fitsdk/: Columnar.py  FitFile.py  __init__.py
fitdb/fitsdk/profile/: ProfileTypes.py  __init__.py
fitdb/models/: Operational.py
fitdb/profile/: FitDBProfile.py  ProfileTypes.py
notebooks/: fitdb_usage.ipynb  zone_calculator.ipynb
